--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^8.3.1"
   },
   "devDependencies": {
+    "eslint": "^9.0.0",
     "nodemon": "^3.1.0"
   },
   "description": ""
